--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.2",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
-    "@angular/forms": "^15.1.2",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
-    "rxjs": "^7.8.0",
-    "tslib": "^2.5.0",
-    "zone.js": "^0.12.0"
+    "@angular/animations": "15.1.2",
+    "@angular/cdk": "15.2.8",
+    "@angular/common": "15.1.2",
+    "@angular/compiler": "15.1.2",
+    "@angular/core": "15.1.2",
+    "@angular/forms": "15.1.2",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "15.1.2",
+    "@angular/platform-browser-dynamic": "15.1.2",
+    "@angular/router": "15.1.2",
+    "rxjs": "7.8.0",
+    "tslib": "2.5.0",
+    "zone.js": "0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "15.1.0-next.2",
