--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/common": "15.1.2",
     "@angular/compiler": "15.1.2",
     "@angular/core": "15.1.2",
+    "@angular/fire": "5.1.2",
     "@angular/forms": "15.1.2",
     "@angular/material": "^15.2.8",
     "@angular/platform-browser": "15.1.2",
     "@angular/platform-browser-dynamic": "15.1.2",
     "@angular/router": "15.1.2",
+    "firebase": "^5.5.0",
     "rxjs": "7.8.0",
     "tslib": "2.5.0",
     "zone.js": "0.12.0"
